--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
+    "jquery": "^3.5.1",
     "rss-parser": "^3.8.0"
   },
   "devDependencies": {
